src/objects/FieloAlpha__Category__c.object
<CustomObject>
    <description>[Frontend] Categories you create for hierarchically ordering rewards and content feeds.</description>
    <fields>
        <fullName>FieloPLT__AttachmentId__c</fullName>
        <description>Allows to add an image to the Category</description>
        <label>Image source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Category_Group_Name__c</fullName>
        <formula>FieloPLT__Category__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Category name</description>
        <label>Category</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>That category belongs to another program. You must create the category in this program before trying to use it.</errorMessage>
            <filterItems>
                <field>$Source.FieloPLT__Program__c</field>
                <operation>equals</operation>
                <valueField>FieloPLT__Category__c.FieloPLT__Program__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FieloPLT__Category__c</referenceTo>
        <relationshipLabel>Categories</relationshipLabel>
        <relationshipName>Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Order__c</fullName>
        <description>Sort the categories</description>
        <label>Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the program to which the category belongs</inlineHelpText>
        <label>Program</label>
        <referenceTo>FieloPLT__Program__c</referenceTo>
        <relationshipLabel>Categories</relationshipLabel>
        <relationshipName>Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Category</label>
    <listViews>
        <fullName>FieloPLT__All</fullName>
        <columns>NAME</columns>
        <columns>FieloPLT__Category__c</columns>
        <columns>FieloPLT__Order__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloPLT__All_Categories</fullName>
        <columns>NAME</columns>
        <columns>FieloPLT__Order__c</columns>
        <columns>FieloPLT__Category_Group_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Categories</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Categories</pluralLabel>
    <recordTypes>
        <fullName>FieloPLT__CategoryItem</fullName>
        <active>true</active>
        <label>Category Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloPLT__Category_Group</fullName>
        <active>true</active>
        <description>Element that represent a set of categories</description>
        <label>Category Group</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FieloPLT__ModifyProgram</fullName>
        <active>true</active>
        <description>Is not possible to modify the associated Program</description>
        <errorConditionFormula>ISCHANGED(FieloPLT__Program__c) &amp;&amp; NOT(ISBLANK(PRIORVALUE(FieloPLT__Program__c)))</errorConditionFormula>
        <errorDisplayField>FieloPLT__Program__c</errorDisplayField>
        <errorMessage>Is not possible to modify the associated Program</errorMessage>
    </validationRules>
</CustomObject>